# openscreen

./: .gitignore  .gitmodules  .gn  AUTHORS  BUILD.gn  COMMITTERS  DEPS  PRESUBMIT.py  PRESUBMIT.sh  PRESUBMIT_test_mocks.py  README.md  cast_streaming.crt  cast_streaming_rsa  cast_streaming_rsa.pub  generated_root_cast_receiver.crt  groups  mykey.pub  project.config  rsa.priate  rsa_pub.pem  rsakey.pem  run_cast_streaming_receiver.sh  run_cast_streaming_sender.sh  update-clang-toolchain.patch
api/: BUILD.gn  mdns_screen_listener.h  network_service_manager.cc  network_service_manager.h  screen_info.cc  screen_info.h  screen_info_unittest.cc  screen_listener.cc  screen_listener.h
api/impl/: BUILD.gn  controller_publisher_impl.cc  controller_publisher_impl.h  controller_publisher_impl_unittest.cc  fake_mdns_platform_service.cc  fake_mdns_platform_service.h  fake_mdns_platform_service_unittest.cc  fake_mdns_responder_adapter.cc  fake_mdns_responder_adapter.h  fake_mdns_responder_adapter_unittest.cc  internal_services.cc  internal_services.h  mdns_controller_publisher_factory.cc  mdns_platform_service.cc  mdns_platform_service.h  mdns_receiver_listener_factory.cc  mdns_responder_service.cc  mdns_responder_service.h  mdns_responder_service_unittest.cc  mdns_screen_listener_factory.cc  mdns_screen_listener_factory.h  message_demuxer.cc  message_demuxer.h  network_service_manager.cc  platform_service.cc  platform_service.h  protocol_connection_client_factory.cc  protocol_connection_server_factory.cc  receiver_list.cc  receiver_list.h  receiver_list_unittest.cc  receiver_listener_impl.cc  receiver_listener_impl.h  receiver_listener_impl_unittest.cc  screen_list.cc  screen_list.h  screen_list_unittest.cc  screen_listener_impl.cc  screen_listener_impl.h  screen_listener_impl_unittest.cc  (+13 more)
api/public/: BUILD.gn  client_config.h  controller_publisher.cc  controller_publisher.h  endpoint_request_ids.cc  endpoint_request_ids.h  endpoint_request_ids_unittest.cc  mdns_controller_publisher_factory.h  mdns_receiver_listener_factory.h  mdns_screen_listener.cc  mdns_screen_listener_factory.cc  mdns_screen_listener_factory.h  mdns_screen_publisher_factory.cc  mdns_screen_publisher_factory.h  message_demuxer.cc  message_demuxer.h  message_demuxer_unittest.cc  network_metrics.h  network_service_manager.cc  network_service_manager.h  presentation_common.cc  presentation_common.h  presentation_controller.h  presentation_receiver.h  protocol_connection.cc  protocol_connection.h  protocol_connection_client.h  protocol_connection_server.h  receiver_info.cc  receiver_info.h  receiver_info_unittest.cc  receiver_listener.cc  receiver_listener.h  screen_connection.h  screen_connection_client.cc  screen_connection_client.h  screen_connection_server.h  screen_info.cc  screen_info.h  screen_info_unittest.cc  (+11 more)
build_overrides/: BUILD.gn  build.gni
cast/api/: BUILD.gn  DEPS  frame_agent_config.h  frame_receiver_config.h  frame_sender_config.h  video_codec_params.h
cast/common/: BUILD.gn  DEPS
cast/protocol/: BUILD.gn  DEPS
cast/standalone_sender/: BUILD.gn  cast_agent.cc  cast_agent.h  cast_agent_integration_tests.cc  connection_settings.cc  connection_settings.h  ffmpeg_glue.cc  ffmpeg_glue.h  looping_file_cast_agent.cc  looping_file_cast_agent.h  looping_file_sender.cc  looping_file_sender.h  main.cc  receiver_chooser.cc  receiver_chooser.h  remoting_initializer.cc  remoting_initializer.h  remoting_sender.cc  remoting_sender.h  simulated_capturer.cc  simulated_capturer.h  streaming_av1_encoder.cc  streaming_av1_encoder.h  streaming_opus_encoder.cc  streaming_opus_encoder.h  streaming_video_encoder.cc  streaming_video_encoder.h  streaming_vp8_encoder.cc  streaming_vp8_encoder.h  streaming_vpx_encoder.cc  streaming_vpx_encoder.h
cast/test/: BUILD.gn  cast_socket_e2e_test.cc  device_auth_test.cc  make_crl_tests.cc
control/: BUILD.gn  messages.cc  messages.h  messages_unittest.cc
discovery/mdns/: BUILD.gn  DEPS  domain_name.cc  domain_name.h  domain_name_unittest.cc  embedder_demo.cc  mdns_domain_claimed_callback.h  mdns_domain_confirmed_provider.h  mdns_probe.cc  mdns_probe.h  mdns_probe_manager.cc  mdns_probe_manager.h  mdns_probe_manager_unittest.cc  mdns_probe_unittest.cc  mdns_publisher.cc  mdns_publisher.h  mdns_publisher_unittest.cc  mdns_querier.cc  mdns_querier.h  mdns_querier_unittest.cc  mdns_random.h  mdns_random_unittest.cc  mdns_reader.cc  mdns_reader.h  mdns_reader_fuzztest.cc  mdns_reader_unittest.cc  mdns_receiver.cc  mdns_receiver.h  mdns_receiver_unittest.cc  mdns_record_changed_callback.h  mdns_records.cc  mdns_records.h  mdns_records_unittest.cc  mdns_responder.cc  mdns_responder.h  mdns_responder_adapter.cc  mdns_responder_adapter.h  mdns_responder_adapter_impl.cc  mdns_responder_adapter_impl.h  mdns_responder_adapter_impl_unittest.cc  (+19 more)
dnssd/: BUILD.gn  dns_sd_temp.cc
dnssd/public/: instance_record.h  publisher.h  querier.h  txt_record.h
embedder/: BUILD.gn  discovery_state_machine.cc  discovery_state_machine.h  discovery_state_machine_unittest.cc  screen_info.cc  screen_info.h  screen_info_unittest.cc  screen_list.cc  screen_list.h  screen_list_unittest.cc  screen_listener_impl.cc  screen_listener_impl.h  screen_listener_impl_unittest.cc
embedder/api/: BUILD.gn  screen_listener.cc  screen_listener.h
gni/: openscreen.gni  openscreen_templates.gni  split_static_library.gni
msgs/: BUILD.gn  messages.cc  messages.h  messages_unittest.cc  osp.cddl  osp_messages.cddl  request_response_handler.h
msgs/presentation/: messages.cc  messages.gen.cc  messages.gen.h  messages.h  messages_unittest.cc
osp_crypto/: BUILD.gn  DEPS  openssl_util.cc  openssl_util.h  rsa_private_key.cc  rsa_private_key.h  rsa_private_key_unittest.cc  secure_hash.cc  secure_hash.h  secure_hash_unittest.cc  sha2.cc  sha2.h  sha2_unittest.cc
platform/linux/: BUILD.gn  error.cc  event_waiter.cc  network_interface.cc  socket.cc  socket.h
streaming/cast/: BUILD.gn  bandwidth_estimator.cc  bandwidth_estimator.h  big_endian_unittest.cc  clock_drift_smoother.cc  clock_drift_smoother.h  compound_rtcp_builder.cc  (+58 more)
(+1340 files in other folders)
