# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("api") {
  deps = [
    "impl",
    "public:api",
  ]
}

source_set("api_unittests") {
  testonly = true

  sources = [
    "impl/fake_mdns_platform_service.cc",
    "impl/fake_mdns_platform_service.h",
    "impl/fake_mdns_platform_service_unittest.cc",
    "impl/fake_mdns_responder_adapter.cc",
    "impl/fake_mdns_responder_adapter.h",
    "impl/fake_mdns_responder_adapter_unittest.cc",
    "impl/mdns_responder_service_unittest.cc",
    "impl/screen_list_unittest.cc",
    "impl/screen_listener_impl_unittest.cc",
    "impl/screen_publisher_impl_unittest.cc",
    "public/screen_info_unittest.cc",
  ]

  deps = [
    "impl",
    "public:api",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest",
  ]
}
