# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("api") {
  public_deps = [
    "public:api",
  ]
  deps = [
    "impl",
  ]
}

source_set("api_unittests") {
  testonly = true

  sources = [
    "impl/mdns_responder_service_unittest.cc",
    "impl/screen_list_unittest.cc",
    "impl/screen_listener_impl_unittest.cc",
    "impl/screen_publisher_impl_unittest.cc",
    "public/screen_info_unittest.cc",
  ]

  deps = [
    ":api",
    "impl/quic:test_support",
    "impl/testing",
    "impl/testing:fakes_unittests",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest",
  ]
}
