# Copyright 2019 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/cast.gni")
import("//build/config/features.gni")
import("//build/config/gclient_args.gni")

# Set to false to build OpenScreen targets as a standalone library.
build_with_chromium = false

enable_safe_libcxx = true

declare_args() {
  # Allows googletest to pretty-print various absl types.
  gtest_enable_absl_printers = true

  # Allow projects that wish to stay on C++17 to override Chromium's default.
  use_cxx17 = true

  # Set to true to enable use of developer-generated certificates with the
  # Cast Streaming library.
  cast_allow_developer_certificate = false
}

if (host_os == "mac" || is_apple) {
  # Needed for is_apple when targeting macOS or iOS, independent of host.
  # Needed for host_os=="mac" for running host tool such as gperf in blink
  # even when targeting e.g. Windows.
  declare_args() {
    # Use the system install of Xcode for tools like ibtool, libtool, etc.
    # This does not affect the compiler. When this variable is false, targets
    # will instead use a hermetic install of Xcode. [The hermetic install can
    # be obtained with gclient sync after setting the environment variable
    # FORCE_MAC_TOOLCHAIN for target_os mac only].
    use_system_xcode = true
  }

  assert(current_os != "ios" || use_system_xcode)
  assert(host_os == "mac" || !use_system_xcode)
}
