# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("messages") {
  sources = [
    "messages.cc",
    "messages.h",
  ]

  deps = [ "//third_party/tinycbor" ]
}

source_set("unittests") {
  testonly = true

  sources = [
    "messages_unittest.cc",
  ]

  deps = [
    ":messages",
    "//third_party/googletest:gtest",
  ]
}
