# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build_overrides/build.gni")

source_set("dnssd") {
  defines = []

  sources = [
    "dns_sd_temp.cc",
    "public/instance_record.h",
    "public/publisher.h",
    "public/querier.h",
    "public/txt_record.h",
  ]

  deps = [
    "../cast/common:mdns",
    "../platform",
    "../third_party/abseil",
  ]

  configs += [ "../build:allow_build_from_embedder" ]
}

source_set("unittests") {
  testonly = true

  sources = []

  deps = [
    ":dnssd",
    "../cast/common:mdns",
    "../platform",
    "../third_party/abseil",
    "../third_party/googletest:gmock",
    "../third_party/googletest:gtest",
  ]

  configs += [ "../build:allow_build_from_embedder" ]
}
