# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("embedder") {
  sources = [
    "discovery_state_machine.cc",
    "discovery_state_machine.h",
    "screen_list.cc",
    "screen_list.h",
    "screen_listener_impl.cc",
    "screen_listener_impl.h",
  ]

  deps = [ "../api" ]
}

source_set("embedder_unittests") {
  testonly = true

  sources = [
    "discovery_state_machine_unittest.cc",
    "screen_list_unittest.cc",
    "screen_listener_impl_unittest.cc",
  ]

  deps = [
    ":embedder",
    "//base",
    "//platform",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest",
  ]
}
