# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build_overrides/build.gni")

source_set("osp_crypto") {
  sources = [
    "openssl_util.cc",
    "openssl_util.h",
    "rsa_private_key.cc",
    "rsa_private_key.h",
    "secure_hash.cc",
    "secure_hash.h",
    "sha2.cc",
    "sha2.h",
  ]

  deps = [
    "../third_party/abseil",
    "../third_party/boringssl",
  ]

  configs += [ "../build:allow_build_from_embedder" ]
}

source_set("unittests") {
  testonly = true

  sources = [
    "rsa_private_key_unittest.cc",
    "secure_hash_unittest.cc",
    "sha2_unittest.cc",
  ]

  deps = [
    ":osp_crypto",
    "../third_party/abseil",
    "../third_party/boringssl",
    "../third_party/googletest:gmock",
    "../third_party/googletest:gtest",
  ]

  configs += [ "../build:allow_build_from_embedder" ]
}
