# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("impl") {
  sources = [
    "internal_services.cc",
    "internal_services.h",
    "mdns_platform_service.cc",
    "mdns_platform_service.h",
    "mdns_responder_service.cc",
    "mdns_responder_service.h",
    "mdns_screen_listener_factory.cc",
    "mdns_screen_publisher_factory.cc",
    "message_demuxer.cc",
    "message_demuxer.h",
    "network_service_manager.cc",
    "screen_list.cc",
    "screen_list.h",
    "screen_listener_impl.cc",
    "screen_listener_impl.h",
    "screen_publisher_impl.cc",
    "screen_publisher_impl.h",
  ]

  public_deps = [
    "../public:api",
    "//msgs",
  ]
  deps = [
    "quic",
    "//base",
    "//platform",
  ]
}
