# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build_overrides/build.gni")
import("//third_party/protobuf/proto_library.gni")

source_set("certificate") {
  sources = [
    "certificate/cast_cert_validator.cc",
    "certificate/cast_cert_validator.h",
    "certificate/cast_cert_validator_internal.cc",
    "certificate/cast_cert_validator_internal.h",
    "certificate/cast_crl.cc",
    "certificate/cast_crl.h",
    "certificate/types.cc",
    "certificate/types.h",
  ]
  public_deps = [
    "../../third_party/boringssl",
  ]

  deps = [
    ":certificate_proto",
    "../../platform",
    "../../third_party/abseil",
    "../../util",
  ]
}

proto_library("certificate_proto") {
  sources = [
    "certificate/proto/revocation.proto",
  ]
}

source_set("channel") {
  sources = [
    "channel/cast_socket.cc",
    "channel/cast_socket.h",
    "channel/connection_namespace_handler.cc",
    "channel/connection_namespace_handler.h",
    "channel/message_framer.cc",
    "channel/message_framer.h",
    "channel/message_util.cc",
    "channel/message_util.h",
    "channel/namespace_router.cc",
    "channel/namespace_router.h",
    "channel/virtual_connection.h",
    "channel/virtual_connection_manager.cc",
    "channel/virtual_connection_manager.h",
    "channel/virtual_connection_router.cc",
    "channel/virtual_connection_router.h",
  ]

  deps = [
    ":certificate_proto",
    ":channel_proto",
    "../../util",
  ]

  public_deps = [
    "../../platform",
    "../../third_party/abseil",
    "../../util",
  ]
}

proto_library("channel_proto") {
  sources = [
    "channel/proto/authority_keys.proto",
    "channel/proto/cast_channel.proto",
  ]
}

source_set("test_helpers") {
  testonly = true
  sources = [
    "certificate/test_helpers.cc",
    "certificate/test_helpers.h",
    "channel/test/fake_cast_socket.h",
    "channel/test/mock_cast_message_handler.h",
  ]
  public_deps = [
    ":certificate",
    ":channel",
    "../../platform:test",
    "../../third_party/boringssl",
    "../../third_party/googletest:gmock",
  ]
  deps = [
    "../../platform",
    "../../platform:test",
  ]
}

source_set("unittests") {
  testonly = true
  sources = [
    "certificate/cast_cert_validator_unittest.cc",
    "certificate/cast_crl_unittest.cc",
    "channel/cast_socket_unittest.cc",
    "channel/connection_namespace_handler_unittest.cc",
    "channel/message_framer_unittest.cc",
    "channel/namespace_router_unittest.cc",
    "channel/virtual_connection_manager_unittest.cc",
    "channel/virtual_connection_router_unittest.cc",
  ]

  deps = [
    ":certificate",
    ":certificate_unittest_proto",
    ":channel",
    ":channel_proto",
    ":test_helpers",
    "../../platform",
    "../../third_party/boringssl",
    "../../third_party/googletest:gmock",
    "../../third_party/googletest:gtest",
    "../../util",
  ]
}

proto_library("certificate_unittest_proto") {
  testonly = true
  sources = [
    "certificate/proto/test_suite.proto",
  ]
}
