# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/external_libraries.gni")
import("//build_overrides/build.gni")

# Define the executable target only when the build is configured to use the
# standalone platform implementation; since this is itself a standalone
# application.
if (!build_with_chromium) {
  if (have_ffmpeg && have_libopus) {
    executable("cast_sender") {
      sources = [
        "ffmpeg_glue.cc",
        "ffmpeg_glue.h",
        "main.cc",
        "simulated_capturer.cc",
        "simulated_capturer.h",
      ]
      deps = [
        "../../platform",
        "../../util",
        "../streaming:sender",
      ]
      include_dirs = ffmpeg_include_dirs
      lib_dirs = ffmpeg_lib_dirs
      libs = ffmpeg_libs
    }
  }
}
