# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("unittests") {
  testonly = true
  sources = [
    "device_auth_test.cc",
  ]

  deps = [
    "../../third_party/googletest:gmock",
    "../../third_party/googletest:gtest",
    "../common:channel",
    "../common:test_helpers",
    "../common/channel/proto:channel_proto",
    "../receiver:channel",
    "../receiver:test_helpers",
    "../sender:channel",
  ]
}
