# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("mdns_responder_example") {
  sources = [
    "mdns_responder_adapter.cc",
    "mdns_responder_adapter.h",
    "mdns_responder_example.cc",
    "mdns_responder_platform.cc",
    "mdns_responder_platform.h",
  ]

  deps = [
    "//base",
    "//platform",
    "//third_party/mDNSResponder:core",
  ]
}

executable("mdns_responder_listen") {
  sources = [
    "mdns_responder_adapter.cc",
    "mdns_responder_adapter.h",
    "mdns_responder_listen.cc",
    "mdns_responder_platform.cc",
    "mdns_responder_platform.h",
  ]

  deps = [
    "//base",
    "//platform",
    "//third_party/mDNSResponder:core",
  ]
}
