# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build_overrides/build.gni")

source_set("mdns_interface") {
  sources = [
    "domain_name.cc",
    "domain_name.h",
    "mdns_responder_adapter.cc",
    "mdns_responder_adapter.h",
  ]

  public_deps = [
    "../../base",
    "../../platform",
  ]
  configs += [ "../..:root_config_overrides" ]
}

if (!build_with_chromium) {
  executable("embedder_demo") {
    sources = [
      "embedder_demo.cc",
    ]

    deps = [
      ":mdns",
    ]
  }

  source_set("mdns") {
    sources = [
      "mdns_responder_adapter_impl.cc",
      "mdns_responder_adapter_impl.h",
      "mdns_responder_platform.cc",
      "mdns_responder_platform.h",
    ]

    public_deps = [
      ":mdns_interface",
      "../../base",
      "../../platform",
    ]

    deps = [
      "../../third_party/mDNSResponder:core",
    ]
  }

  source_set("mdns_unittests") {
    testonly = true

    sources = [
      "domain_name_unittest.cc",
      "mdns_responder_adapter_impl_unittest.cc",
    ]

    deps = [
      ":mdns",
      "//third_party/googletest:gmock",
      "//third_party/googletest:gtest",
    ]
  }
}
