# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("linux") {
  sources = [
    "error.cc",
    "event_waiter.cc",
    "network_interface.cc",
    "socket.cc",
    "socket.h",
  ]

  deps = [ "../api" ]
}
