# Copyright 2019 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

visibility = [ "./*" ]

source_set("util") {
  testonly = true

  visibility += [ "../../*" ]

  public = [ "task_util.h" ]

  public_deps = [
    "../../platform",
    "../../third_party/abseil",
    "../../util",
  ]

  public_configs = [ "../../build_overrides:openscreen_include_dirs" ]
}
