# Copyright 2018 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build_overrides/build.gni")

visibility = [ "./*" ]

if (current_toolchain == host_toolchain) {
  executable("cddl") {
    visibility += [ "../../*" ]

    public = []

    sources = [
      "codegen.cc",
      "codegen.h",
      "logging.cc",
      "logging.h",
      "main.cc",
      "parse.cc",
      "parse.h",
      "sema.cc",
      "sema.h",
    ]

    deps = [
      # TODO(issuetracker.google.com/309442516): Possibly remove dependency on
      # :standalone_impl when this issue is resolved.
      "../../platform:standalone_impl",
      "../../third_party/abseil",
      "../../util:base",
    ]

    configs += [ "../../build:openscreen_include_dirs" ]
  }
}
